--- a/assets/scss/responsive.css
+++ b/assets/scss/responsive.css
@@ -1,8 +1,11 @@
 @media (min-width: 320px) and (max-width: 575px) {
+  .hero-section {
+    padding-bottom: 50px;
+  }
   .hero-section .searchbar {
     position: relative;
     width: 100%;
-    transform: translate(0%, -10%);
+    transform: translate(0%, 15%);
     left: 0;
     top: 0;
   }
@@ -42,10 +45,15 @@
   }
 }
 @media (min-width: 576px) and (max-width: 991px) {
+  .hero-section {
+    padding-bottom: 50px;
+  }
   .hero-section .searchbar {
+    position: relative;
     width: 100%;
-    transform: translate(0%, -14%);
+    transform: translate(0%, 25%);
     left: 0;
+    top: 0;
   }
   .property-list .wrapper {
     display: block;
