--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -15,11 +15,11 @@ a {
 
 .main-btn {
   background-color: #7166F0;
-  padding: 12px 15px;
+  padding: 9px 14px;
   margin: 0px 0px 0px 10px;
   color: white;
   border-radius: 5px;
-  font-weight: bold;
+  font-weight: 500;
   border: none;
   outline: none;
   position: relative;
@@ -89,11 +89,11 @@ a {
 
 .heading a {
   background-color: #7166F0;
-  padding: 12px 15px;
+  padding: 9px 14px;
   margin: 0px 0px 0px 10px;
   color: white;
   border-radius: 5px;
-  font-weight: bold;
+  font-weight: 500;
   border: none;
   outline: none;
   position: relative;
