--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -15,11 +15,11 @@ a{
 }
 @mixin primary-button{
     background-color: $primary-color;
-    padding: 12px 15px;
+    padding: 9px 14px;
     margin: 0px 0px 0px 10px;
     color: white;
     border-radius: 5px;
-    font-weight: bold;
+    font-weight: 500;
     border: none;
     outline: none;
     position: relative;
